--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
+<nav>
+    <ul>
+        <li>
+            <a routerLink="home/customers">customers</a>
+        </li>
+        <li>
+            <a routerLink="home/contractors">contractors</a>
+        </li>
+    </ul>
+</nav>
 <p>home works!</p>
+
+
+<router-outlet></router-outlet>
