--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -1,6 +1,6 @@
 <h1>customers Listing</h1>
 <li>
-    <ul *ngFor="let customer of listData | async">
+    <ul *ngFor="let customer of listData">
         {{customer.first_name}} {{customer.last_name}}
     </ul>
 </li>
