apply header-content-footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<nz-header>
 <nav>
     <ul>
         <li>
@@ -9,6 +10,12 @@
     </ul>
 </nav>
 <p>home works!</p>
+</nz-header>
 
+<nz-content>
+    <router-outlet></router-outlet>
+</nz-content>
 
-<router-outlet></router-outlet>
+<nz-footer>
+    
+</nz-footer>
