quick UI tidy up

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,7 @@
 <nz-header>
-<nav>
-    <ul>
-        <li>
-            <a routerLink="home/customers">customers</a>
-        </li>
-        <li>
-            <a routerLink="home/contractors">contractors</a>
-        </li>
-    </ul>
-</nav>
-<p>home works!</p>
+            <span><a routerLink="home/customers">customers</a></span>
+            ||
+            <span><a routerLink="home/contractors">contractors</a></span>
 </nz-header>
 
 <nz-content>
@@ -17,5 +9,5 @@
 </nz-content>
 
 <nz-footer>
-    
+    footer content
 </nz-footer>
