--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <nz-header>
-            <span><a routerLink="home/customers">customers</a></span>
-            ||
-            <span><a routerLink="home/contractors">contractors</a></span>
+    <nav>
+        <a routerLink="home">Home</a>
+        ||
+        <a routerLink="home/customers">customers</a>
+        ||
+        <a routerLink="home/contractors">contractors</a>
+    </nav> 
 </nz-header>
 
 <nz-content>
@@ -9,5 +13,5 @@
 </nz-content>
 
 <nz-footer>
-    footer content
+    Teokigi
 </nz-footer>
