--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -1,6 +1,39 @@
-<h1>customers Listing</h1>
-<ul>
+<!-- <ul>
     <li *ngFor="let customer of listData">
         {{customer.first_name}} {{customer.last_name}}
     </li>
-</ul>
+</ul> -->
+
+<table>
+    <tr>
+        <td>
+           <h2>Name</h2>
+        </td>
+        <td>
+            <h2>Gender</h2>
+        </td>
+        <td>
+            <h2>Car</h2>
+        </td>
+        <td>
+            <h2>No Claims</h2>
+        </td>
+    </tr>
+    <tr *ngFor="let customer of listData">
+        <td>
+            {{customer.first_name}} {{customer.last_name}}
+        </td>
+        <td>
+            {{customer.gender}}
+        </td>
+        <td *ngIf="customer.car">
+            {{customer.car}}
+        </td>
+        <td *ngIf="!customer.car">
+            N/A
+        </td>
+        <td>
+            {{customer.no_claims}}
+        </td>
+    </tr>
+</table>
