--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,19 @@
 <nz-layout>
     <nz-header>
-        <ul nz-menu nzTheme="dark" nzMode="horizontal">
-            <li nz-menu-item>
-                <a routerLink="home">Home</a>
-            </li>
-            
-            <li nz-menu-item>
-                <a routerLink="home/customers">customers</a>
-            </li>
-            
-            <li nz-menu-item>
-                <a routerLink="home/contractors">contractors</a>
-            </li>
-        </ul> 
+        <div height="40px" width="120px"></div>
+            <ul nz-menu nzTheme="dark" nzMode="horizontal">
+                <li nz-menu-item>
+                    <a routerLink="home">Home</a>
+                </li>
+                
+                <li nz-menu-item>
+                    <a routerLink="home/customers">customers</a>
+                </li>
+                
+                <li nz-menu-item>
+                    <a routerLink="home/contractors">contractors</a>
+                </li>
+            </ul> 
     </nz-header>
 
     <nz-content>
