--- a/src/app/home/customers/customers.component.scss
+++ b/src/app/home/customers/customers.component.scss
@@ -1,16 +1,27 @@
-table {
+// table {
+//     border-style:solid;
+// }
+
+// td{
+//     border-style:solid;
+//     padding:3px;
+// }
+
+// tr:nth-child(even){
+//     background:skyblue;
+
+// }
+// tr:hover{
+//     background-color: lightsalmon;
+// }
+thead.any-table-thead {
+    background-color:#c50e0e;
+}
+
+#heading-logo{
+    width: 300px;
+    height:100%;
+    background-color:white;
+    // background-image:url('../../../assets/afs.png');
     border-style:solid;
-}
-
-td{
-    border-style:solid;
-    padding:3px;
-}
-
-tr:nth-child(even){
-    background:skyblue;
-
-}
-tr:hover{
-    background-color: lightsalmon;
 }
