--- a/src/theme.less
+++ b/src/theme.less
@@ -8,8 +8,8 @@
 @html-selector: html;
 
 // -------- Colors -----------
-@primary-color: @blue-6;
-@info-color: @blue-6;
+@primary-color: #F5a624;
+@info-color: @orange-6;
 @success-color: @green-6;
 @processing-color: @blue-6;
 @error-color: @red-5;
@@ -293,7 +293,7 @@
 
 // Layout
 @layout-body-background: #f0f2f5;
-@layout-header-background: #001529;
+@layout-header-background: #272626;
 @layout-header-height: 64px;
 @layout-header-padding: 0 50px;
 @layout-header-color: @text-color;
@@ -534,8 +534,8 @@
 // Table
 // --
 @table-bg: @component-background;
-@table-header-bg: @background-color-light;
-@table-header-color: @heading-color;
+@table-header-bg: #272626;
+@table-header-color: #c50e0e;
 @table-header-sort-bg: @background-color-base;
 @table-body-sort-bg: #fafafa;
 @table-row-hover-bg: @item-hover-bg;
