--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,13 @@
 <nz-layout>
     <nz-header>
-        <div height="40px" width="120px"></div>
+        <div class="logo"></div>
             <ul nz-menu nzTheme="dark" nzMode="horizontal">
                 <li nz-menu-item>
-                    <a routerLink="home">Home</a>
+                    <a routerLink="">Home</a>
                 </li>
-                
                 <li nz-menu-item>
                     <a routerLink="home/customers">customers</a>
                 </li>
-                
                 <li nz-menu-item>
                     <a routerLink="home/contractors">contractors</a>
                 </li>
