--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,7 @@
 <p>auth works!</p>
+<!-- <amplify-authenticator>
+    <div>
+      My App
+      <amplify-sign-out></amplify-sign-out>
+    </div>
+  </amplify-authenticator> -->
