--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,9 @@
                 <li nz-menu-item>
                     <a routerLink="home/contractors">contractors</a>
                 </li>
+                <li nz-menu-item>
+                    <a routerLink="auth">Login</a>
+                </li>
             </ul> 
     </nz-header>
 
