managed to get logo working and auth working

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
-<p>auth works!</p>
-<!-- <amplify-authenticator>
+<amplify-authenticator>
     <div>
       My App
       <amplify-sign-out></amplify-sign-out>
     </div>
-  </amplify-authenticator> -->
+  </amplify-authenticator>
+  <a routerLink="/home">Back</a>
