--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,21 @@
 <nz-layout>
     <nz-header>
-        <div class="logo"></div>
+        <span><div class="logo"></div>
             <ul nz-menu nzTheme="dark" nzMode="horizontal">
                 <li nz-menu-item>
                     <a routerLink="">Home</a>
                 </li>
                 <li nz-menu-item>
-                    <a routerLink="home/customers">customers</a>
+                    <a routerLink="customers">customers</a>
                 </li>
                 <li nz-menu-item>
-                    <a routerLink="home/contractors">contractors</a>
+                    <a routerLink="contractors">contractors</a>
                 </li>
                 <li nz-menu-item>
                     <a routerLink="auth">Login</a>
                 </li>
             </ul> 
+        </span>
     </nz-header>
 
     <nz-content>
