--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,13 @@
+.logo{
+    height:40px;
+    width:90px;
+    background-image:url('../../assets/afs.png');
+    background-repeat:no-repeat;
+    background-size: cover;
+    float:left;
+    
+}
+
 [nz-menu] {
     line-height:64px;
 }
