can sort and filter

--- a/src/app/home/contractors/contractors.component.html
+++ b/src/app/home/contractors/contractors.component.html
@@ -1,1 +1,13 @@
-<p>contractors works!</p>
+<div class="form-body">
+    <form autocomplete="off" (ngSubmit)="onCreate()">
+        <button type="submit">Create Todo</button>
+    </form>
+</div>
+
+<div *ngIf="todoList">
+    <ul>
+    <li *ngFor="let list of todoList.data.listTodos.items">
+        {{ list.name }}, {{ list.description }}
+    </li>
+    </ul>
+</div>
